--- a/home.component.html
+++ b/home.component.html
@@ -2,6 +2,7 @@
 
 <div class = "bg-light mt-3">
 <h1 class = "text-center"> WELCOME TO NEW LIBRARY</h1>
+<h1 class = "text-center"> WELCOME TO NEW LIBRARY</h1>
 </div>
 
 <div>
